# SoundSampler

./: Cargo.toml  LICENSE  README.md
examples/: song_sampler.json  song_sin.json  song_triangle.json
src/cli/: main.rs
src/gui/: app.rs  main.rs
src/gui/pane/: mixdown.rs  mod.rs  sound_source.rs  track.rs
src/lib/: envelope.rs  error.rs  mod.rs  note.rs  player.rs  score.rs  track.rs  utils.rs
src/lib/source/: karplus_strong.rs  mod.rs  sampler.rs  sin.rs  triangle.rs
