[package]
name = "SoundSampler"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "gui"
path = "src/gui/main.rs"
windows_subsystem = "windows"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
eframe = { version = "0.32.1", default-features = true }
egui_file = "0.23.1"
hound = "3.5.1"
image = "0.25.8"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
